<resources>
    <string name="app_name">Aurora</string>
    <string name="action_signup">Signup</string>
    <string name="action_login">Login</string>
    <string name="app_slogan">Feel the music</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">password</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_userName">User Name</string>
    <string name="reset_password">¿Olvidaste tu password?</string>
    <string name="prompt_Name">Name</string>
    <string name="prompt_lastName">Last name</string>
    <string name="prompt_phone">(+55) Phone</string>
    <string name="prompt_confirmPassword">Repeat Password</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_modificarData">Modificar Datos</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_email_exist">Email ya existente</string>
    <string name="error_invalid_password">Password demasiado corta</string>
    <string name="error_incorrect_password">Password incorrecta</string>
    <string name="error_field_required">Este Campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_principal">Music</string>
    <string name="title_activity_canciones">Canciones encontradas</string>
    <string name="title_activity_principal_user">PrincipalUser</string>
    <string name="title_activity_principal_admin">PrincipalAdmin</string>
    <string name="action_signUp">Done</string>

    <string name="title_activity_reproductor">Reproductor</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="error_invalid_login">Email o password incorrectos</string>
    <string name="delete_account_txt">Eliminar Cuenta</string>
    <string name="search_title">Encuentra tu musica</string>
    <string name="add_playlist">Crear playlist</string>
    <string name="title_activity_activity_reset_password">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
