<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_userName"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditTxtEmailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:ems="10"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="password"
        android:password="true" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_confirmPassword"
        android:password="true" />

    <Button
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:text="@string/action_signUp"
        android:id="@+id/btn_toSignUp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_gravity="center_horizontal"
        android:onClick="toSignUp"
        android:background="#11f079"
        android:textColor="#010101" />

    <Button
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:id="@+id/btn_toCancel"
        android:layout_gravity="center_horizontal"
        android:onClick="btn_toCancel"
        android:background="#fa0303"
        android:textColor="#ffffff" />

</LinearLayout>